* listing all locations/ logging in and out

--- a/Wanderlust-Web/index.html
+++ b/Wanderlust-Web/index.html
@@ -14,7 +14,7 @@
     <script src="js/libs/parse.js"></script>
 </head>
 <body>
-<header><h1>Office notes</h1></header>
+<header><h1>Wanderlust Bulgaria</h1></header>
 
 <section id="wrapper">
     <nav id="menu">
@@ -25,20 +25,16 @@
     </section>
 </section>
 
-<footer>&copy; 2015 by SoftUni Foundation, No Rights Reserved</footer>
+<footer>2017 &copy; Wanderlust Bulgaria, All Rights Reserved</footer>
 </body>
 
-<script src="js/bindingModels/note.js"></script>
-<script src="js/helpers/requester.js"></script>
+<script src="js/bindingModels/location.js"></script>
 
-<script src="js/models/userModel.js"></script>
-<script src="js/models/noteModel.js"></script>
-
-<script src="js/views/noteViews.js"></script>
+<script src="js/views/locationViews.js"></script>
 <script src="js/views/userViews.js"></script>
 <script src="js/views/homeViews.js"></script>
 
-<script src="js/controllers/noteController.js"></script>
+<script src="js/controllers/locationController.js"></script>
 <script src="js/controllers/userController.js"></script>
 <script src="js/controllers/homeController.js"></script>
 
